# MinecraftEnv

./: .gitignore  README.md  build.gradle  gradle.properties  libnative-lib.dylib
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  framebuffer_capturer.cpp
src/main/java/com/kyhsgeekcode/minecraft_env/: ActionSpace.java  ActionSpace.kt  BiomeCenterFinder.kt  CaptureFramebuffer.kt  ClientSideLogic.kt  CsvLogger.kt  EnvironmentInitializer.kt  FramebufferCapturer.kt  InitialEnvironment.java  InitialEnvironment.kt  KeyboardInputWillInterface.java  MessageIO.kt  MinecraftSoundListener.kt  Minecraft_env.java  Minecraft_env.kt  MouseInfo.kt  ObservationSpace.java  ObservationSpace.kt  PrintWithTime.kt  ServerSideLogic.kt  TickSynchronizer.kt  ToMessage.kt
src/main/java/com/kyhsgeekcode/minecraft_env/client/: Minecraft_envClient.java
src/main/java/com/kyhsgeekcode/minecraft_env/entities/: DroneEntity.kt
src/main/java/com/kyhsgeekcode/minecraft_env/mixin/: CacheBiomeAccessMixin.java  ChatVisibleMessageAccessor.java  ClientCommonNetworkHandlerClientAccessor.java  ClientDoAttackInvoker.java  ClientDoItemUseInvoker.java  ClientEntityRenderDispatcherAccessor.java  ClientPlayNetworkHandlerMixin.java  ClientRenderInvoker.java  ClientRenderTickCounterAccessor.java  CreateWorldScreenMoreOptionsAccessor.java  GLBindFrameBufferHookMixin.java  InputUtilMixin.java  InventoryScreenDrawBackgroundLoggingMixin.java  KeyboardInputFieldMixin.java  KeyboardInputMixin.java  KeyboardMixin.java  ManageFrameBufferInterface.java  MinecraftServer_tickspeedMixin.java  MoreOptionsDialogSeedTextFieldAccessor.java  MouseMixin.java  RenderMixin.java  RenderTickCounterAccessor.java  ServerPlayNetworkHandlerDisableSpamChecker.java  TickSpeedMixin.java  WindowOffScreenMixin.java  Window_offscreenMixin.java  WorldListWidgetLevelSummaryAccessor.java
src/main/java/com/kyhsgeekcode/minecraft_env/proto/: ActionSpace.java  ActionSpaceMessageKt.kt  BlockInfoKt.kt  BlockStateKt.kt  ChatMessageInfoKt.kt  EntitiesWithinDistanceKt.kt  EntityInfoKt.kt  HitResultKt.kt  InitialEnvironment.java  InitialEnvironmentMessageKt.kt  ItemStackKt.kt  ObservationSpace.java  ObservationSpaceMessageKt.kt  SoundEntryKt.kt  StatusEffectKt.kt
src/main/proto/: action_space.proto  initial_environment.proto  observation_space.proto
src/main/resources/: com.kyhsgeekcode.minecraft_env.mixin.json  fabric.mod.json
